# unmask

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  setup.sh
docs/: design.md  investigation-engine-seam.md  scanner-rebuild.md
reference/: README.md
reference/mcd-report/: SKILL.md
reference/mcd-report/scripts/: report.py  run.sh  setup.sh
tests/: test_assess.py  test_compose.py  test_containers.py  test_dataflow.py  test_doctor.py  test_dropper.py  test_false_positives.py  test_html_report.py  test_joern.py  test_leads.py  test_mcp.py  test_model_routing.py  test_network.py  test_observe.py  test_project.py  test_qa.py  test_questions.py  test_resume.py  test_resume_cache.py  test_review_fixes.py  test_reviewers.py  test_signatures.py  test_smoke.py  test_transform.py  test_verify.py  test_workqueue.py
tests/fixtures/: callee_parity_map.json
tests/fixtures/benign-ci/: README.md  package.json
tests/fixtures/benign-ci/.github/workflows/: ci.yml
tests/fixtures/benign-ci/docs/: guide.md
tests/fixtures/benign-ci/scripts/: bootstrap.sh
tests/fixtures/evil-npm/: index.js  package.json
tests/fixtures/evil-npm/scripts/: postinstall.js
tests/fixtures/proven-dataflow/: decode_exec.py  fetch_exec.js  unproven_decode.js
tests/oracle/: capture.py  test_oracle.py
tests/oracle/fixtures/benign-pkg/: index.js  package.json  util.py
tests/oracle/fixtures/obf-js/: index.js
tests/oracle/fixtures/py-curlpipe/: loader.py  setup.py
tests/oracle/golden/: provenance.json
tests/oracle/golden/benign-pkg/: assessment.json  observations.json
tests/oracle/golden/evil-npm/: assessment.json  findings.json  observations.json
tests/oracle/golden/obf-js/: assessment.json  findings.json  observations.json
tests/oracle/golden/py-curlpipe/: assessment.json  findings.json  observations.json
