# uv workspace root for the mcd tool.
#
# This repo ships two wheels from one tree:
#   - unmask       (core: static/source MCD, graph+ledger, report) -> persona 1
#   - unmask-re    (heavy: binary triage, decompilers, sandbox)    -> persona 2
#
# The core discovers RE capabilities at runtime through the `unmask.providers`
# entry-point group. If unmask-re is not installed, binaries are reported as an
# honest blind spot instead of being silently skipped.
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# muster graduated to its own private repo (github.com/batteryshark/muster), consumed
# here as a pinned git dependency, not a workspace member. Bump `rev` to adopt a new
# muster release.
muster = { git = "https://github.com/batteryshark/muster.git", rev = "3a14fad5dec9e84483d12ebd4c3a62aecbb0eeb5" }
unmask = { workspace = true }
unmask-re = { workspace = true }

# Convenience: `uv sync` at the root brings up the core for development.
[project]
name = "mcd-workspace"
version = "0"
requires-python = ">=3.11"
dependencies = ["unmask"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
# The vendored RE skills under packages/unmask-re/skills/ carry their own (Python 2-era)
# test files and vendored deps, so keep `packages` in norecursedirs.
testpaths = ["tests"]
norecursedirs = ["packages", ".venv", "reference", "_vendor"]
