# uv workspace root for the mcd tool.
#
# This repo ships two wheels from one tree:
#   - unmask       (core: static/source MCD, graph+ledger, report) -> persona 1
#   - unmask-re    (heavy: binary triage, decompilers, sandbox)    -> persona 2
#
# The core discovers RE capabilities at runtime through the `unmask.providers`
# entry-point group. If unmask-re is not installed, binaries are reported as an
# honest blind spot instead of being silently skipped.
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# muster graduated to its own private repo (github.com/batteryshark/muster), consumed
# here as a pinned git dependency, not a workspace member. Bump `rev` to adopt a new
# muster release.
muster = { git = "https://github.com/batteryshark/muster.git", rev = "452d57304b16c52b6efc8039637fb20b6b11bed3" }
unmask = { workspace = true }
unmask-re = { workspace = true }

# A cloned repo's `uv sync` brings up the WHOLE tool — core + review + MCP + the
# unmask-re binary/RE add-on — via unmask's `all` extra, so a newcomer gets a working
# install in one command. (Working on the core alone? `uv sync --package unmask`.)
# The light-core-only story is the PyPI split: `pip install unmask` vs `unmask-re`.
[project]
name = "mcd-workspace"
version = "0"
requires-python = ">=3.11"
dependencies = ["unmask[all]"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
# The vendored RE skills under packages/unmask-re/skills/ carry their own (Python 2-era)
# test files and vendored deps, so keep `packages` in norecursedirs.
testpaths = ["tests"]
norecursedirs = ["packages", ".venv", "reference", "_vendor"]
